# Blue-Bot

./: README.md  client.py  package-lock.json  package.json  run.py
bot/: client.ts
bot/events/: ready.ts
commands/: __init__.py  moderation.py  ticketing.py  utility.py
htmlcord/: CMakeLists.txt  HOW_IT_WORKS.txt
htmlcord/src/: main.cpp
htmlcord/src/include/: json_parser.hpp  parser.hpp
logging/: log_entry.ts  types.ts
panel/: index.html  style.css
panel/scripts/: BotManager.ts
